hunting for correlations

--- a/drug_use_raw.ipynb
+++ b/drug_use_raw.ipynb
@@ -677,6 +677,8 @@
     "\n",
     "#https://github.com/fivethirtyeight/data/blob/master/drug-use-by-age/drug-use-by-age.csv\n",
     "#key structure: [drug]-[x] where x is in {use, frequency}\n",
+    "#use=past 12 months \n",
+    "#frequency = number of times in the past 12 months\n",
     "\n",
     "drug_use_by_age_df = pd.read_csv('data/drug-use-by-age.csv', index_col=0).replace('-', np.nan)\n",
     "\n",
